# QtDesk

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: Task.h  TaskService.cpp  TaskService.h
src/db/: Database.cpp  Database.h  TaskRepository.cpp  TaskRepository.h
src/net/: QuoteClient.cpp  QuoteClient.h
src/tests/: CMakeLists.txt  test_taskservice.cpp
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
tests/: CMakeLists.txt
